--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 *.sh eol=lf
-*.ttf filter=lfs diff=lfs merge=lfs -text
-*.otf filter=lfs diff=lfs merge=lfs -text
+*.ttf filter=lfs diff=lfs merge=lfs binary
+*.otf filter=lfs diff=lfs merge=lfs binary
