--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "serve": "live-server --port=8989 --browser=chrome --open=vivliostyle-js/viewer/vivliostyle-viewer.html#x=../../target/sweetmusic-vol7.html --cors --verbose"
   },
   "dependencies": {
-    "http-server": "^0.11.1"
+    "http-server": "^0.11.1",
+    "jsdom": "^13.2.0"
   },
   "devDependencies": {
     "live-server": "^1.2.1",
